# metslib

./: .clang-format  CMakeLists.txt  format.py
metslib/: abstract-search.hh  local-search.hh  mets.hh  metslib_config.hh  model.hh  observer.hh  simulated-annealing.hh  tabu-search.hh  termination-criteria.hh
test/: CMakeLists.txt  permutation_problem_test.cc  tabu_list_test.cc  termination_test.cc
